--- a/views/create_user.erb
+++ b/views/create_user.erb
@@ -1,2 +1,3 @@
-<h1>Thanks for signing up!</h1>
-<p><a href="/" class="btn btn-primary">Go Home</a></p>
+<h1>Congratulations on your new account!</h1>
+<p>Sign-in below to enjoy premium access to Seattle's best Teriyaki joints</p>
+<p><a href="/logins/new"" class="btn btn-primary">Sign-In</a></p>
