--- a/views/create_login.erb
+++ b/views/create_login.erb
@@ -1,2 +1,3 @@
-<h1>Thanks for signing in!</h1>
-<p><a href="/" class="btn btn-primary">Go Home</a></p>
+<h1>You Are Signed-in!</h1>
+<h3>You now have exclusive access to Teriyaki rankings and reviews</h3>
+<p><a href="/events/all" class="btn btn-primary">Access Teriyaki</a></p>
