--- a/views/new_login.erb
+++ b/views/new_login.erb
@@ -1,13 +1,21 @@
-<h1>Login</h1>
+<body>
+  <div class="container">
+        <div class="jumbotron jumbotron-fluid text-center">
+            <h1 class="display-4" style = "font-family: "helvetica">Teriyaki Hub </h1>
+            <p class="lead"> Seattle's Only Destination for Teriyaki Rankings and Reviews</p>
+            </div>
+    </div>
 
-<form action="/logins/create" method="post">
-  <div class="form-group">
-    <label>Email address</label>
-    <input type="email" class="form-control" placeholder="name@example.com" name="email">
-  </div>
-  <div class="form-group">
-    <label>Password</label>
-    <input type="password" class="form-control" name="password">
-  </div>
-  <button type="submit" class="btn btn-primary">Sign In</button>
-</form>
+    <h1>Sign-In</h1>
+    <form action="/logins/create" method="post">
+        <div class="form-group">
+            <label>Email address</label>
+            <input type="email" class="form-control" placeholder="name@example.com" name="email">
+        </div>
+        <div class="form-group">
+            <label>Password</label>
+            <input type="password" class="form-control" name="password">
+        </div>
+        <button type="submit" class="btn btn-primary">Sign-In</button>
+    </form>
+</body>
