--- a/views/new_user.erb
+++ b/views/new_user.erb
@@ -1,8 +1,16 @@
-<h1>Sign Up</h1>
+<body>
+  <div class="container">
+        <div class="jumbotron jumbotron-fluid text-center">
+            <h1 class="display-4" style = "font-family: "helvetica">Teriyaki Hub </h1>
+            <p class="lead"> Seattle's Only Destination for Teriyaki Rankings and Reviews</p>
+            </div>
+    </div>
+
+<h2>Sign-up to Access Teriyaki Rankings and Reviews!</h2>
 
 <form action="/users/create" method="post">
   <div class="form-group">
-    <label>Your name</label>
+    <label>Username</label>
     <input type="text" class="form-control" name="name">
   </div>
   <div class="form-group">
@@ -13,5 +21,6 @@
     <label>Password</label>
     <input type="password" class="form-control" name="password">
   </div>
-  <button type="submit" class="btn btn-primary">Sign Up</button>
+  <button type="submit" class="btn btn-primary">Create Account</button>
 </form>
+</body>
