--- a/views/new_user.erb
+++ b/views/new_user.erb
@@ -1,6 +1,6 @@
 <body>
   <div class="container">
-        <div class="jumbotron jumbotron-fluid text-center">
+        <div class="jumbotron jumboheaderimg jumbotron-fluid text-center">
             <h1 class="display-4" style = "font-family: "helvetica">Teriyaki Hub </h1>
             <p class="lead"> Seattle's Only Destination for Teriyaki Rankings and Reviews</p>
             </div>
