--- a/views/create_user.erb
+++ b/views/create_user.erb
@@ -15,5 +15,5 @@ client = Twilio::REST::Client.new(AC031e83ca044bc6239f52a5039f428634, d496d94a2e
 client.messages.create(
  from: "+12029329915", 
  to: "+12067796004",
- body: "Congratulations on signing-up for Teriyaki Hub! Login on our website to view Seattle's best teriyaki locations, reviews, and rankings!!"
+ body: "Congratulations on signing-up for Teriyaki Hub! Login on our website to view Seattle's best teriyaki locations, reviews, and rankings!"
 )
