--- a/views/layout.erb
+++ b/views/layout.erb
@@ -24,7 +24,7 @@
 
  <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="//events/all">Teriyaki Hub</a>
+            <a class="navbar-brand" href="/events/all">Teriyaki Hub</a>
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="/users/new">Sign Up</a>
