--- a/views/create_login_failed.erb
+++ b/views/create_login_failed.erb
@@ -1,2 +1,2 @@
-<h1>Nope.</h1>
-<p><a href="/" class="btn btn-primary">Go Home</a></p>
+<h1>That username or password was not recognized.</h1>
+<p><a href="/logins/new" class="btn btn-primary">Try Again</a></p>
