--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,9 @@
 body {
 font-family: 'Segoe UI'
 }
+
+.jumbotron {
+    background-attachment: fixed;
+    background-size: cover;
+    height: 500px;
+}
