--- a/views/layout.erb
+++ b/views/layout.erb
@@ -52,6 +52,15 @@
       <%= yield %>
     </div>
 
+    <hr class="my-3">
+
+    <div class="container footer text-center">
+        <div class="row my-3">
+            <p> <b> Teriyaki Hub </b> </p>
+            </div>
+        </div>
+    </div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
