--- a/views/layout.erb
+++ b/views/layout.erb
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" crossorigin="anonymous">
     
     <!-- Your own CSS -->
-    <link rel="stylesheet" href="/stylesheet.css">
+    <link rel="stylesheet" href="/styles.css">
 
     <title>Teriyaki Hub</title>
   </head>
