--- a/views/reviews_confirm.erb
+++ b/views/reviews_confirm.erb
@@ -1,3 +1,2 @@
-<h1>Your Ratings have been submitted!</h1>
-
+<h1>Your ratings and review have been submitted!</h1>
 <p class = "mt-3"><a href ="/events/all" class="btn btn-outline-primary">Back to Restaurant List</a></p>
