--- a/views/layout.erb
+++ b/views/layout.erb
@@ -19,52 +19,51 @@
     <link rel="stylesheet" href="/styles.css">
 
     <title>Teriyaki Hub</title>
+
   </head>
   <body>
-
- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            <a class="navbar-brand" href="/events/all">Teriyaki Hub</a>
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/users/new">Sign Up</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/logins/new">Sign In</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/events/all">Teriyaki Joints</a>
-                </li>
-            </ul>
-            <% if @current_user %>
-                <ul class="navbar-nav ml-auto">
-                    <li class="navbar-text">
-                        Logged in as <%= @current_user[:name] %>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <a class="navbar-brand" href="/events/all">Teriyaki Hub</a>
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/users/new">Sign Up</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/logout" class="nav-link">Logout</a>
+                        <a class="nav-link" href="/logins/new">Sign In</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/events/all">Teriyaki Joints</a>
                     </li>
                 </ul>
-            <% end %>
-        </div>
-    </nav>
-    <div class="container mt-5">
-      <%= yield %>
-    </div>
-
-    <hr class="my-3">
-
-    <div class="container footer text-center">
-        <div class="row my-3">
-            <p> <b> Teriyaki Hub </b> </p>
+                <% if @current_user %>
+                    <ul class="navbar-nav ml-auto">
+                        <li class="navbar-text">
+                            Logged in as <%= @current_user[:name] %>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/logout" class="nav-link">Logout</a>
+                        </li>
+                    </ul>
+                <% end %>
             </div>
+        </nav>
+        <div class="container mt-5">
+            <%= yield %>
         </div>
-    </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  </body>
+        <hr class="my-3">
+    
+        <div class="container footer text-center">
+            <p><font size="-1">Teriyaki Hub </font></p>
+        </div>
+
+        <hr class="my-3">
+
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    </body>
 </html>
