food quality updates

--- a/views/event.erb
+++ b/views/event.erb
@@ -48,14 +48,14 @@
         <% end %>
     
         <p><b>Variety:</b></p>
-        <% if @avg_sound == nil %>
+        <% if @avg_food_quality == nil %>
             <p>No Ratings Yet</p>
         <% else %>
             <p>
-            <%= (@avg_sound).round(2) %>/10
-            <% if @avg_sound >= 7 %>
+            <%= (@avg_food_quality).round(2) %>/10
+            <% if @avg_food_quality >= 7 %>
                     <i class="fas fa-smile"></i>
-            <% elsif @avg_sound >= 5 %>
+            <% elsif @avg_food_quality >= 5 %>
                 <i class="fas fa-meh"></i>
             <% else %>
                 <i class="fas fa-frown"></i>
@@ -126,11 +126,11 @@
             </p>
         </div>
         <div class = "col-md-3">
-            <p>Sound Rating: 
-            <%= ratings[:sound_rating] %>
-            <% if ratings[:sound_rating] >= 7 %>
+            <p>Food Quality Rating: 
+            <%= ratings[:food_quality_rating] %>
+            <% if ratings[:food_quality_rating] >= 7 %>
                 <i class="fas fa-smile"></i>
-            <% elsif ratings[:sound_rating] >= 5 %>
+            <% elsif ratings[:food_quality_rating] >= 5 %>
                 <i class="fas fa-meh"></i>
             <% else %>
                 <i class="fas fa-frown"></i>
