--- a/views/new_ratings.erb
+++ b/views/new_ratings.erb
@@ -19,8 +19,8 @@
                 </select>
             </div>
             <div class="form-group">
-                <label>Sound Rating</label>
-                <select class="form-control" name="sound_rating">
+                <label>Food Quality Rating</label>
+                <select class="form-control" name="food_quality_rating">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
