--- a/views/new_ratings.erb
+++ b/views/new_ratings.erb
@@ -34,8 +34,8 @@
                 </select>
             </div>
             <div class="form-group">
-                <label>Payout Rating</label>
-                <select class="form-control" name="payout_rating">
+                <label>Food Variety Rating</label>
+                <select class="form-control" name="food_variety_rating">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
