--- a/views/event.erb
+++ b/views/event.erb
@@ -64,14 +64,14 @@
         <% end %>
 
         <p><b>Ambiance:</b></p>
-        <% if @avg_vibe == nil %>
+        <% if @avg_ambiance == nil %>
             <p>No Ratings Yet</p>
         <% else %>
             <p>
-            <%= (@avg_vibe).round(2) %>/10
-            <% if @avg_vibe >= 7 %>
+            <%= (@avg_ambiance).round(2) %>/10
+            <% if @avg_ambiance >= 7 %>
                     <i class="fas fa-smile"></i>
-            <% elsif @avg_vibe >= 5 %>
+            <% elsif @avg_ambiance >= 5 %>
                 <i class="fas fa-meh"></i>
             <% else %>
                 <i class="fas fa-frown"></i>
@@ -150,11 +150,11 @@
             </p>
         </div>
         <div class = "col-md-3">
-            <p>Vibe Rating: 
-            <%= ratings[:vibe_rating] %>
-            <% if ratings[:vibe_rating] >= 7%>
+            <p>Ambiance Rating: 
+            <%= ratings[:ambiance_rating] %>
+            <% if ratings[:ambiance_rating] >= 7%>
                 <i class="fas fa-smile"></i>
-            <% elsif ratings[:vibe_rating] >= 5 %>
+            <% elsif ratings[:ambiance_rating] >= 5 %>
                 <i class="fas fa-meh"></i>
             <% else %>
                 <i class="fas fa-frown"></i>
