--- a/views/new_ratings.erb
+++ b/views/new_ratings.erb
@@ -49,8 +49,8 @@
                 </select>
             </div>
             <div class="form-group">
-                <label>Vibe Rating</label>
-                <select class="form-control" name="vibe_rating">
+                <label>Ambiance Rating</label>
+                <select class="form-control" name="ambiance_rating">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
