--- a/views/event.erb
+++ b/views/event.erb
@@ -1,7 +1,7 @@
 <div class = "row">
     <div class = "col">
         <h1><%= @event[:event_name] %></h1>
-        <h4><%= @event[:address] %></h4>
+        <p><%= @event[:description] %></p>
     </div>
 </div>
 
@@ -80,7 +80,7 @@
         <% end %>
     </div>
     <div class = "col-md-6 col-md-offset-6">
-        <p>Email: <%= @event[:email] %></p>
+        <p>Address: <%= @event[:address] %></p>
         <p>Phone: <%= @event[:phone] %></p>
         <p>Website: <a href="<%=@event[:website]%>"><%=@event[:website]%></a></p>
         <iframe
