--- a/views/create_login.erb
+++ b/views/create_login.erb
@@ -1,3 +1,3 @@
 <h1>You Are Signed-in!</h1>
 <h3>You now have exclusive access to Teriyaki rankings and reviews</h3>
-<p><a href="/events/all" class="btn btn-primary">Access Teriyaki</a></p>
+<p><a href="/restaurants/all" class="btn btn-primary">Access Teriyaki</a></p>
