--- a/views/layout.erb
+++ b/views/layout.erb
@@ -24,7 +24,7 @@
   <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-                <a class="navbar-brand" href="/events/all">Teriyaki Hub</a>
+                <a class="navbar-brand" href="/restaurants/all">Teriyaki Hub</a>
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="/users/new">Sign Up</a>
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="/logins/new">Sign In</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/events/all">Teriyaki Joints</a>
+                        <a class="nav-link" href="/restaurants/all">Teriyaki Joints</a>
                     </li>
                 </ul>
                 <% if @current_user %>
