--- a/views/new_ratings.erb
+++ b/views/new_ratings.erb
@@ -1,8 +1,8 @@
-<h1> New Review for <%= @event[:event_name] %></h1>
+<h1> New Review for <%= @restaurant[:restaurant_name] %></h1>
 
 <div class = "row">
     <div class = "col">
-        <form action="/event/<%= @event[:id] %>/reviews/confirm">
+        <form action="/restaurant/<%= @restaurant[:id] %>/reviews/confirm">
             <div class="form-group">
                 <label>Overall Rating</label>
                 <select class="form-control" name="overall_rating">
