--- a/views/new_review.erb
+++ b/views/new_review.erb
@@ -1,8 +1,8 @@
-<h1> New Review for <%= @event[:event_name] %></h1>
+<h1> New Review for <%= @restaurant[:restaurant_name] %></h1>
 
 <div class = "row">
     <div class = "col">
-        <form action="/events/all<%= @event[:id] %>/reviews/confirm">
+        <form action="/restaurants/all<%= @restaurant[:id] %>/reviews/confirm">
             <div class="form-group">
                 <label>Overall Rating</label>
                 <select class="form-control" name="overall_rating">
@@ -11,6 +11,11 @@
                     <option value="3">3</option>
                     <option value="4">4</option>
                     <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
                 </select>
             </div>
             <div class="form-group">
@@ -21,6 +26,11 @@
                     <option value="3">3</option>
                     <option value="4">4</option>
                     <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
                 </select>
             </div>
             <div class="form-group">
@@ -31,6 +41,11 @@
                     <option value="3">3</option>
                     <option value="4">4</option>
                     <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
                 </select>
             </div>
             <div class="form-group">
@@ -41,6 +56,11 @@
                     <option value="3">3</option>
                     <option value="4">4</option>
                     <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
                 </select>
             </div>           
             <div class="form-group">
