--- a/views/new_login.erb
+++ b/views/new_login.erb
@@ -1,7 +1,7 @@
 <body>
   <div class="container">
         <div class="jumbotron jumbotron-fluid text-center">
-            <h1 class="display-4" style = "font-family: "helvetica">Teriyaki Hub </h1>
+            <h1 class="display-4">Teriyaki Hub </h1>
             <p class="lead"> Seattle's Only Destination for Teriyaki Rankings and Reviews</p>
             </div>
     </div>
