--- a/views/new_ratings.erb
+++ b/views/new_ratings.erb
@@ -64,8 +64,8 @@
                 </select>
             </div>           
             <div class="form-group">
-                <label>Comments</label>
-                <textarea class="form-control" rows="3" name="comments"></textarea>
+                <label>Review</label>
+                <textarea class="form-control" rows="3" name="reviews"></textarea>
             </div>
             <button type="submit" class="btn btn-outline-primary">Submit</button>
         </form>
