--- a/views/restaurant.erb
+++ b/views/restaurant.erb
@@ -164,7 +164,7 @@
     </div>
     <div class = "row">
         <div class = "col">
-            <%= ratings[:comments] %>
+            <%= ratings[:reviews] %>
         </div>
     </div>
 <% end %>
