--- a/public/styles.css
+++ b/public/styles.css
@@ -5,12 +5,14 @@ body {
 .jumbotron {
     background-attachment: fixed;
     background-color: blanchedalmond;
+    text-shadow: 5px 5px 5px black;
     background-size: cover;
-}
+    }
 
 .jumbotron h1 {
     color: blue;
     font-family: fantasy;
+
 }
 
 .footer {
