--- a/views/create_login.erb
+++ b/views/create_login.erb
@@ -1,3 +1,3 @@
 <h1>You Are Signed-in!</h1>
-<h4>You now have exclusive access to Teriyaki rankings and reviews</h4>
+<h4>You now have exclusive access to Teriyaki ratings and reviews</h4>
 <p><a href="/restaurants/all" class="btn btn-primary">Access Teriyaki</a></p>
