--- a/views/new_ratings.erb
+++ b/views/new_ratings.erb
@@ -1,4 +1,4 @@
-<h1> New Review for <%= @restaurant[:restaurant_name] %></h1>
+<h1> New Ratings & Review for <%= @restaurant[:restaurant_name] %></h1>
 
 <div class = "row">
     <div class = "col">
